--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ nav li a{
     color: #131313;
 }
 .banner-description{
-    color: #727272;
+  color: #727272;
 }
 
        /* button style */
@@ -66,21 +66,175 @@ nav li a{
   }
 
 
+  
+
+  /* main section style */
+  main{
+    max-width: 1440px;
+    margin: 70px auto;
+
+  }
+
+  /* teams-container style */
+  .teams-container{
+    display: flex;
+    align-items: center;
+  }
+  .teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+  }
+  .teams-contant{
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  .teams-title{
+    font-size: 2.8rem;
+  }
+  .teams-title .quick-list{
+    color: #727272;
+    font-weight: 500px;
+  }
+  .teams-title .text-features{
+    color: #FF900E;
+    font-weight: 700px;
+  }
+  /* features section */
+
+ .features{
+  display: flex;
+  gap: 140px;
+  margin-top: 130px;
+ }
+ .features-contant .card2{
+  padding: 30px;
+  margin: 20px 0px;
+  border-radius: 8px;
+  background: #FFF;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.6);
+ }
+ .features .nav-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+ }
+ .features-img img{
+  height: 90%;
+  margin-left: 70px;
+ }
+ .ten-years-badges{
+  border-radius: 8px;
+  background: #FF900E;
+  color: white;
+  width: 342px;
+  padding: 40px;
+  text-align: center;
+  position: relative;
+  bottom: 100px;
+ }
+ .ten-years-badges h2{
+  font-size: 4rem;
+  margin: 0;
+ }
+ .ten-years-badges p{
+  font-size: 1.5rem;
+  
+ }
+
+  /* facts section */
+  .facts{
+
+    max-width: 1450px;
+    margin: 70px auto;
+  }
+  .facts-card-container{
+    display: flex;
+    justify-content: space-around;
+  }
+  .facts-card-container .card{
+    border-radius: 5px;
+    border: 1px solid #FF900E;
+  }
+  .card{
+    text-align: center;
+    padding: 30px;
+  }
+  .facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .facts-card-container .card-title{
+    font-weight: 600;
+    color: #727272;
+    font-size: 1.25rem;
+    margin-top: 5px;
+  }
+
+  /* sponsors style */
+  .sponsors{
+    text-align: center;
+  }
+.sponsors-img-container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 50px;
+  gap: 40px;
+}
+.sponsors-img-container img{
+  width: 165px;
+
+}
+footer{
+  text-align: center;
+  margin-top: 50px;
+  width: 100%;
+}
+
+
+
+
+
   /* Responsive media query */
   /* For Mobile Devices */
   @media screen and (max-width: 576px) {
     header{
         padding: 20px;
     }
-    nav{
+    nav,
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container,
+    .features{
         flex-direction: column;
     }
-    
+  .features-img img{
+    width: 85%;
+  }
+  .ten-years-badges{
+    position: static;
+    width: 80%;
+  }
+    .teams-img-container{
+      grid-template-columns: 1fr;
+    }
+    .teams-contant,
+    .facts-card-container{
+      padding-left: 10px;
+      padding-right: 10px; 
   }  
+  .facts-card-container{
+    gap: 10px;
+  }
+}
     
   /* For Medium Devices */
   @media screen and (min-width: 576px) and (max-width: 992px) {
-    nav{
+    nav, .teams-container,
+    .sponsors-img-container,
+    .features{
         flex-direction: column;
     }
     header{
